
    * Tree.kind is not recorded at the top level of the hierarchy, as it was
      missing on EmptyTree, leading to a bug with merge on EmptyTrees.
      (Robert Collins)

    * WorkingTree.__del__ has been removed, it was non deterministic and not 
      doing what it was intended to. See WorkingTree.__init__ for a comment
      about future directions. (Robert Collins/Martin Pool)

  BUG FIXES:

    * Better handling of branches in directories with non-ascii names. 
      (Joel Rosdahl, Panagiotis Papadakos)

bzr 0.1.1 2005-10-12

  BUG FIXES:

    * Fix problem in pulling over http from machines that do not 
      allow directories to be listed.

    * Avoid harmless warning about invalid hash cache after 
      upgrading branch format.

  PERFORMANCE: 
  
    * Avoid some unnecessary http operations in branch and pull.


bzr 0.1 2005-10-11

  NOTES:

    * 'bzr branch' over http initially gives a very high estimate
      of completion time but it should fall as the first few 
      revisions are pulled in.  branch is still slow on 
      high-latency connections.

  BUG FIXES:
  
    * bzr-man.py has been updated to work again. Contributed by
      Rob Weir.

    * Locking is now done with fcntl.lockf which works with NFS
      file systems. Contributed by Harald Meland.

    * When a merge encounters a file that has been deleted on
      one side and modified on the other, the old contents are
      written out to foo.BASE and foo.SIDE, where SIDE is this
      or OTHER. Contributed by Aaron Bentley.

    * Export was choosing incorrect file paths for the content of
      the tarball, this has been fixed by Aaron Bentley.

    * Commit will no longer commit without a log message, an 
      error is returned instead. Contributed by Jelmer Vernooij.

    * If you commit a specific file in a sub directory, any of its
      parent directories that are added but not listed will be 
      automatically included. Suggested by Michael Ellerman.
